fix: resolve fullstack build issues
Co-authored-by: richenyutian <richenyutian@users.noreply.github.com>